--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<div>
+  <input type="file" (change)="ReadExcel($event)"/>
+</div>
 <div class="container-fluid p-5">
   <div class="card card-body">
     <h3>Employee Table</h3>
